--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -1,153 +1,64 @@
-name: Terraform PR / Merge Workflow
+name: Terraform CI/CD
 
 on:
-  pull_request:
-    branches: [main]
-    paths:
-      - "**/*.tf"
-      - "tf/**"
   push:
-    branches: [main]
-    paths:
-      - "**/*.tf"
-      - "tf/**"
-
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 permissions:
+  id-token: write
   contents: read
-  pull-requests: write
-  id-token: write   # Required for OIDC authentication
-  actions: write
 
 jobs:
-  check:
+  terraform:
+    name: 'Terraform Lint, Security Check, and Deploy'
     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    # ----------------------
-    # AWS OIDC AUTH (NO KEYS)
-    # ----------------------
-    - name: Configure AWS credentials (OIDC)
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-        aws-region: us-east-1
-
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: 1.6.0
-
-    - name: Terraform fmt check
-      run: terraform fmt -recursive -check
-
-    - name: Terraform init
-      run: terraform init \
-            -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" \
-            -backend-config="key=uat/terraform.tfstate" \
-            -backend-config="region=us-east-1"
-
-    - name: Terraform validate
-      run: terraform validate
-
-    # ----------------------
-    # TFLINT
-    # ----------------------
-    - name: Install TFLint
-      run: |
-        curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
-
-    - name: TFLint run
-      run: tflint --init && tflint
-
-    # ----------------------
-    # TRIVY IaC Security Scan
-    # ----------------------
-    - name: Run Trivy IaC Scan
-      uses: aquasecurity/trivy-action@0.20.0
-      with:
-        scan-type: 'config'
-        scan-ref: '.'
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-        ignore-unfixed: true
-        severity: 'CRITICAL,HIGH,MEDIUM'
-
-    - name: Upload Trivy SARIF
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: trivy-results.sarif
-
-    # ----------------------
-    # CHECKOV - IaC Security Scan
-    # ----------------------
-    - name: Run Checkov
-      uses: bridgecrewio/checkov-action@v12
-      with:
-        directory: .
-        framework: terraform
-        output_format: sarif
-        output_file_path: checkov-results.sarif
-        soft_fail: true
-
-    - name: Upload Checkov SARIF
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: checkov-results.sarif
-
-    # ----------------------
-    # TERRAFORM PLAN
-    # ----------------------
-    - name: Terraform plan
-      run: terraform plan -out=plan.out
-
-    - name: Upload plan artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: tf-plan
-        path: plan.out
-        retention-days: 1
-
-
-
-  # ====================================================================
-  # APPLY JOB — ONLY RUNS AFTER MERGE INTO MAIN
-  # ====================================================================
-  apply:
-    needs: check
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
+    env:
+      AWS_REGION: 'us-east-1' # Set your desired AWS region
+      TF_VERSION: '1.4.0'
+      TF_LOG: ERROR           # Set to DEBUG for more verbose logs
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: 'Checkout GitHub repository'
+        uses: actions/checkout@v4
 
-    - name: Configure AWS credentials (OIDC)
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-        aws-region: us-east-1
+      - name: 'Configure AWS credentials'
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ${{ env.AWS_REGION }}
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: 1.6.0
+      - name: 'Set up Terraform'
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
 
-    - name: Terraform init
-      run: terraform init \
-            -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" \
-            -backend-config="key=uat/terraform.tfstate" \
-            -backend-config="region=us-east-1"
+      - name: 'Terraform Init'
+        run: terraform init -upgrade
 
-    - name: Download plan artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: tf-plan
-        path: .
+      - name: 'Terraform Format'
+        run: terraform fmt
 
-    - name: Terraform apply
-      run: terraform apply -auto-approve plan.out
+      - name: 'Terraform Validate'
+        run: terraform validate
+
+      - name: 'Terraform Plan'
+        run: terraform plan -out=tfplan
+
+      - name: 'Terraform Apply'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve tfplan
+        env:
+          TF_LOG: ERROR
+
+    #   # Uncomment these if you want destroy steps
+    #   - name: 'Terraform Plan Destroy'
+    #     run: terraform plan -destroy -out=tfplan-destroy
+
+    #   - name: 'Terraform Apply Destroy'
+    #     run: terraform apply -auto-approve tfplan-destroy
 
 
