--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -36,17 +36,17 @@ jobs:
         with:
           terraform_version: ${{ env.TF_VERSION }}
 
-      - name: 'Terraform Init'
-        run: terraform init -upgrade
+      # - name: 'Terraform Init'
+      #   run: terraform init -upgrade
 
-      - name: 'Terraform Format'
-        run: terraform fmt
+      # - name: 'Terraform Format'
+      #   run: terraform fmt
 
-      - name: 'Terraform Validate'
-        run: terraform validate
+      # - name: 'Terraform Validate'
+      #   run: terraform validate
 
-      - name: 'Terraform Plan'
-        run: terraform plan -out=tfplan
+      # - name: 'Terraform Plan'
+      #   run: terraform plan -out=tfplan
 
       # - name: 'Terraform Apply'
       #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
